# audio-metadata

./: .coveragerc  .flake8  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-meta-topic.md  config.yml
.github/workflows/: ci.yml  doc.yml  lint.yml  publish.yml  test.yml
docs/: Makefile  api.md  api.rst  conf.py  index.md  index.rst  make.bat
src/audio_metadata/: __about__.py  __init__.py  api.py  exceptions.py  models.py  structures.py  utils.py  warnings.py
src/audio_metadata/formats/: __init__.py  flac.py  id3.py  id3v1.py  id3v2.py  id3v2_frames.py  id3v2frames.py  models.py  mp3.py  mp4.py  mp4_tags.py  ogg.py  oggopus.py  oggvorbis.py  tables.py  vorbis.py  vorbis_comments.py  vorbiscomments.py  wav.py  wave.py
src/audio_metadata/tbm_utils/: __init__.py  decorators.py  humanize.py  io.py  structures.py
tests/: fixtures.py  test_api.py  test_flac.py  test_formats_flac.py  test_formats_id3v1.py  test_formats_id3v2.py  test_formats_models.py  test_formats_mp3.py  test_formats_tables.py  test_formats_vorbis.py  test_formats_vorbis_comments.py  test_formats_wav.py  test_id3v1.py  test_id3v2.py  test_id3v2frames.py  test_models.py  test_mp3.py  test_structures.py  test_utils.py  test_vorbis_comments.py  test_vorbiscomments.py  test_wav.py  test_wave.py  utils.py
tests/audio/: flac-0-duration.flac  flac-application.flac  flac-cuesheet.flac  flac-padding.flac  flac-vorbis-id3v24.flac  flac-vorbis.flac  mp4-aac.m4a  mp4-ac3.m4a  mp4-alac.m4a  ogg-opus-cbr.opus  ogg-opus-multi-page-comments.opus
tests/files/audio/: test-flac-0-duration.flac  test-flac-seektable.flac  test-ogg-opus-cvbr.opus  test-ogg-opus-vbr.opus
tests/image/: test.jp2
